--- a/app/src/main/res/layout/day_of_week_item.xml
+++ b/app/src/main/res/layout/day_of_week_item.xml
@@ -33,9 +33,9 @@
         android:gravity="end">
 
         <ImageButton
-            android:id="@+id/prevWeekButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/addNoteButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
