--- a/app/src/main/res/layout/daily_note_item.xml
+++ b/app/src/main/res/layout/daily_note_item.xml
@@ -13,7 +13,7 @@
     <View
         android:id="@+id/colorLine"
         android:layout_width="8dp"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:background="@color/lightBlue"/>
 
     <LinearLayout
@@ -37,7 +37,7 @@
             android:layout_marginStart="20dp"
             android:text="Описание..."
             android:textColor="@color/lightPurple"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
     <LinearLayout
@@ -48,13 +48,13 @@
 
         <ImageButton
             android:id="@+id/checkButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/check_circle_blue"
-            android:contentDescription="Add new note"/>
+            android:contentDescription="Finish the task"/>
 
     </LinearLayout>
 </LinearLayout>
