--- a/app/src/main/res/layout/day_of_week_item.xml
+++ b/app/src/main/res/layout/day_of_week_item.xml
@@ -4,45 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@color/blue"
-    android:gravity="center_vertical"
-    android:layout_marginBottom="3dp"
+    android:orientation="vertical"
     tools:ignore="MissingConstraints">
-
-    <TextView
-        android:id="@+id/dayOfWeekNumberText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:text="01.02"
-        android:textColor="@color/white"
-        android:textSize="25sp" />
-    <TextView
-        android:id="@+id/dayOfWeekText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Понедельник"
-        android:textColor="@color/lightBlue"
-        android:textSize="25sp" />
     <LinearLayout
+        android:id="@+id/dayOfWeekBackground"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="end">
+        android:background="@color/blue"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="3dp"
+        >
 
-        <ImageButton
-            android:id="@+id/addNoteButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
+        <TextView
+            android:id="@+id/dayOfWeekNumberText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/custom_add_button"
-            android:contentDescription="Add new note"/>
+            android:text="01.02"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+        <TextView
+            android:id="@+id/dayOfWeekText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Понедельник"
+            android:textColor="@color/lightBlue"
+            android:textSize="25sp" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="end">
 
+            <ImageButton
+                android:id="@+id/addNoteButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/custom_add_button"
+                android:contentDescription="Add new note"/>
+
+        </LinearLayout>
     </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/noteRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
+
 
 
