--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,17 @@
+<!--night-->
 <resources>
     <style name="Base.Theme.PocketOrganizer" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/darkBlue</item>
         <item name="android:navigationBarColor">@color/darkBlue</item>
+
+        <item name="colorPrimary">@color/lightBlue</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="buttonStyle">@style/RoundedButton</item>
+    </style>
+
+    <!-- Define custom button style -->
+    <style name="RoundedButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
