--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,18 @@
+<!--day-->
 <resources>
     <style name="Base.Theme.PocketOrganizer" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/darkBlue</item>
         <item name="android:navigationBarColor">@color/darkBlue</item>
+
+        <item name="colorPrimary">@color/lightBlue</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="buttonStyle">@style/RoundedButton</item>
+    </style>
+
+    <!-- Define custom button style -->
+    <style name="RoundedButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Theme.PocketOrganizer" parent="Base.Theme.PocketOrganizer" />
