--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,16 @@
             android:gravity="end">
 
             <ImageButton
+                android:id="@+id/accountButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/custom_account_button"
+                android:contentDescription="Account and settings"/>
+
+            <ImageButton
                 android:id="@+id/prevWeekButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
