--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,6 +6,9 @@
 
         <item name="colorPrimary">@color/lightBlue</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:colorBackground">@color/darkBlue</item>
+        <item name="colorOnBackground">@color/white</item>
+
         <item name="buttonStyle">@style/RoundedButton</item>
     </style>
 
@@ -13,5 +16,31 @@
     <style name="RoundedButton" parent="Widget.MaterialComponents.Button">
         <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- Cтиль для AlertDialog -->
+    <style name="CustomAlertDialog" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <!-- Здесь вы можете определить любой атрибут, который хотите изменить -->
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+        <item name="android:background">@drawable/dialog_background</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textSize">18sp</item>
+        <!-- Убираем серую подложку -->
+        <item name="android:backgroundDimEnabled">false</item>
+        <!-- Закругленные углы содержимого диалога -->
+        <item name="shapeAppearance">@style/ShapeAppearance.MaterialComponents.MediumComponent</item>
+
+        <item name="buttonBarPositiveButtonStyle">@style/CustomAlertDialogRedButton</item>
+        <item name="buttonBarNegativeButtonStyle">@style/CustomAlertDialogBlueButton</item>
+    </style>
+    <!-- Красный цвет для текста кнопки в AlertDialog -->
+    <style name="CustomAlertDialogRedButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/red</item>
+        <item name="textAllCaps">false</item>
+    </style>
+    <!-- Голубой цвет для текста кнопки в AlertDialog -->
+    <style name="CustomAlertDialogBlueButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/lightBlue</item>
+        <item name="textAllCaps">false</item>
     </style>
 </resources>
