--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -8,24 +8,25 @@
     android:padding="16dp">
 
     <EditText
-        android:id="@+id/noteTitleEditText"
+        android:id="@+id/titleEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Заголовок"
-        android:textColorHint="@color/lightPurple"/>
+        android:textColorHint="@color/lightPurple"
+        android:inputType="textCapSentences"/>
 
     <EditText
-        android:id="@+id/noteDescriptionEditText"
+        android:id="@+id/descriptionEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Описание"
         android:textColorHint="@color/lightPurple"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|textCapSentences"
         android:lines="4"
         android:minLines="2" />
 
     <Button
-        android:id="@+id/saveNoteButton"
+        android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
