--- a/app/src/main/res/layout/daily_note_item.xml
+++ b/app/src/main/res/layout/daily_note_item.xml
@@ -27,6 +27,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="Задача"
+            android:maxEms="10"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:textSize="25sp" />
 
@@ -36,6 +39,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="Описание..."
+            android:maxEms="12"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="@color/lightPurple"
             android:textSize="20sp" />
 
