--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,7 +44,7 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/monthText"
+            android:id="@+id/nightThemeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ночная тема"
