Добавлена возможность создавать уведомления для заметок
Заметки теперь хранят в себе время, на которое стоит
уведомление.

В редакторе заметок появилась опция выбора и удаления
времени для уведомления. При нажатии на кнопку сохранить
создастся уведомление на это время.

При нажатии на уведомление пользователь перейдён в
MainActivity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:padding="10dp"
             android:text="Сентябрь 2024"
             android:textColor="@color/white"
             android:textSize="30sp"/>
