--- a/app/src/main/res/layout/activity_note_editor.xml
+++ b/app/src/main/res/layout/activity_note_editor.xml
@@ -33,7 +33,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="1">
 
@@ -95,8 +95,68 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"/>
-
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/notificationLayout"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/blue"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="3dp">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/bell_blue"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/timeReminderTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Напоминание"
+                android:textColor="@color/white"
+                android:textSize="22sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/timeInputTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Введите время..."
+                android:textSize="18sp"
+                android:textColor="@color/lightPurple"
+                android:paddingTop="5dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="16dp"
+                android:layout_weight="1"/>
+
+            <ImageButton
+                android:id="@+id/deleteNotificationButton"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/delete_todo_button"
+                android:layout_marginTop="2dp"
+                android:contentDescription="Delete notification"/>
+        </LinearLayout>
+    </LinearLayout>
+
 
 <!--    <Button-->
 <!--        android:id="@+id/copyNoteButton"-->
