--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -58,4 +58,13 @@
     <style name="CustomYearStyle" parent="Widget.MaterialComponents.MaterialCalendar.Year">
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <!-- Custom TimePickerTheme, use colors you desire -->
+    <style name="CustomTimePickerTheme" parent="ThemeOverlay.MaterialComponents.TimePicker">
+        <item name="colorPrimary">@color/lightBlue</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/blue</item>
+        <item name="colorSecondary">@color/darkBlue</item>
+        <item name="android:colorBackground">@color/extraDarkBlue</item>
+    </style>
 </resources>
