--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,66 @@
 
         <item name="colorPrimary">@color/lightBlue</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:colorBackground">@color/darkBlue</item>
+        <item name="colorOnBackground">@color/white</item>
+    </style>
+
+    <!-- Cтиль для AlertDialog -->
+    <style name="CustomAlertDialog" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <!-- Здесь вы можете определить любой атрибут, который хотите изменить -->
+        <item name="android:windowBackground">@drawable/blue_background</item>
+        <item name="android:background">@drawable/blue_background</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textSize">18sp</item>
+        <!-- Убираем серую подложку -->
+        <item name="android:backgroundDimEnabled">false</item>
+        <!-- Закругленные углы содержимого диалога -->
+        <item name="shapeAppearance">@style/ShapeAppearance.MaterialComponents.MediumComponent</item>
+
+        <item name="buttonBarPositiveButtonStyle">@style/CustomAlertDialogRedButton</item>
+        <item name="buttonBarNegativeButtonStyle">@style/CustomAlertDialogBlueButton</item>
+    </style>
+
+    <!-- Красный цвет для текста кнопки в AlertDialog -->
+    <style name="CustomAlertDialogRedButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/red</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <!-- Голубой цвет для текста кнопки в AlertDialog -->
+    <style name="CustomAlertDialogBlueButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/lightBlue</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <!-- Высоком уровне компоненты стиля для MaterialDatePicker -->
+    <style name="CustomMaterialDatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <item name="materialCalendarStyle">@style/CustomMaterialCalendarStyle</item>
+    </style>
+
+    <!-- Стиль календаря -->
+    <style name="CustomMaterialCalendarStyle" parent="Widget.MaterialComponents.MaterialCalendar">
+        <item name="yearStyle">@style/CustomYearStyle</item>
+        <item name="dayStyle">@style/CustomDayStyle</item>
+    </style>
+
+    <!-- Стиль для дня -->
+    <style name="CustomDayStyle" parent="Widget.MaterialComponents.MaterialCalendar.Day">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- Стиль для года -->
+    <style name="CustomYearStyle" parent="Widget.MaterialComponents.MaterialCalendar.Year">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- Custom TimePickerTheme, use colors you desire -->
+    <style name="CustomTimePickerTheme" parent="ThemeOverlay.MaterialComponents.TimePicker">
+        <item name="colorPrimary">@color/lightBlue</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/blue</item>
+        <item name="colorSecondary">@color/darkBlue</item>
+        <item name="android:colorBackground">@color/extraDarkBlue</item>
     </style>
 
     <style name="Theme.PocketOrganizer" parent="Base.Theme.PocketOrganizer" />
